# pacmog

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: release.yml
.github/workflows/: ci.yml  codspeed.yml  rust.yml
benches/: bench.rs
examples/: beep.rs  beep_imaadpcm.rs  beep_imaadpcm_stereo.rs  print_sample_values.rs  read_ima_adpcm_no_std.rs  read_wav_no_std.rs
src/: aiff.rs  error.rs  imaadpcm.rs  lib.rs  reader.rs  wav.rs
src/reader/: wav.rs
tests/: integration_test.rs
tests/resources/: Sine440Hz_1ch_48000Hz_16.aif  Sine440Hz_1ch_48000Hz_24.aif  Sine440Hz_1ch_48000Hz_32.aif  Sine440Hz_1ch_48000Hz_32FP.aif  Sine440Hz_1ch_48000Hz_64FP.aif
