[package]
name = "pacmog"
version = "0.4.2"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
description = "PCM decording library"
categories = ["multimedia::audio", "no-std", "embedded", "multimedia::encoding"]
keywords = ["audio", "wav"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AkiyukiOkayasu/pacmog"
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
arbitrary-int = { version = "1.2.7", default-features = false }
fixed = "1.28.0"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }
thiserror = { version = "1.0", git = "https://github.com/quartiq/thiserror.git", default-features = false, branch = "no-std" }

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
cpal = "0.15.3"
approx = "0.5.1"
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
