[package]
name = "pacmog"
version = "0.5.0"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
description = "PCM decording library"
categories = ["multimedia::audio", "no-std", "embedded", "multimedia::encoding"]
keywords = ["audio", "wav"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AkiyukiOkayasu/pacmog"
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"
exclude = ["tests/resources/*"]

[dependencies]
arbitrary-int = { version = "1.3.0", default-features = false }
fixed = "1.28.0"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
cpal = "0.15.3"
approx = "0.5.1"
criterion = "0.5.1"
symphonia = { version = "0.5.4", features = ["aiff", "adpcm"] }

[[bench]]
name = "bench"
harness = false
