[package]
name = "pacmog"
version = "0.6.0"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
description = "PCM decording library"
categories = ["multimedia::audio", "no-std", "embedded", "multimedia::encoding"]
keywords = ["audio", "wav"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AkiyukiOkayasu/pacmog"
readme = "README.md"
edition = "2024"
rust-version = "1.85.1"
exclude = ["tests/resources/*"]

[dependencies]
arbitrary-int = { version = "1.3.0", default-features = false }
fixed = "1.29.0"
heapless = "0.8.0"
num-traits = { version = "0.2.19", features = [
    "libm",
], default-features = false }
thiserror = { version = "2.0.12", default-features = false }
winnow = { version = "0.7.10", default-features = false }

[dev-dependencies]
cpal = "0.15.3"
approx = "0.5.1"
criterion = { package = "codspeed-criterion-compat", version = "2.10.1" }
symphonia = { version = "0.5.4", features = ["aiff", "adpcm"] }
anyhow = "1.0.98"

[[bench]]
name = "bench"
harness = false
